[project]
name = "saas-retro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13,<2.0",
    "fastapi>=0.115,<1.0",
    "pyjwt>=2.9,<3.0",
    "pydantic>=2.0,<3.0",
    "pymysql>=1.1,<2.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.32,<1.0",
]
